Fixing torrent leech description

--- a/description_templates/torrentleech.jinja2
+++ b/description_templates/torrentleech.jinja2
@@ -1,8 +1,7 @@
 {{ data.custom_description_components }}
-
 ..:: MediaInfo ::..
 {{ data.mediainfo }}
 ..:: Screenshots ::..
 {{ data.screenshots }}
 
-..:: {{ data.internal.uploader_signature }} ::..
+..:: {{ data.internal.uploader_signature_hex }} ::..
