--- a/description_templates/default.jinja2
+++ b/description_templates/default.jinja2
@@ -1,7 +1,7 @@
 {{ data.custom_description_components }}
 
-{{ data.internal.center_start }} {{ data.internal.screenshot_header }}
+{{ data.bbcode.center_start }} {{ data.internal.screenshot_header }}
 
-{{ data.screenshots }} {{ data.internal.center_end }}
+{{ data.screenshots }} {{ data.bbcode.center_end }}
 
-{{ data.internal.center_start }} {{ data.internal.uploader_signature }} {{ data.internal.center_end }}
+{{ data.bbcode.center_start }} {{ data.internal.uploader_signature }} {{ data.bbcode.center_end }}
